# dfd-agents

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/orchestrator-api/: SKILL.md  reference.md
.claude/skills/orchestrator-api/scripts/: orch_api.sh
agent_orchestrator/: __init__.py  agent_options.py  api.py  claude_command.py  claude_stream.py  cli.py  config.py  copilot_command.py  db.py  db_connection.py  db_ids.py  db_json.py  db_migrations.py  db_schema.py  deps.py  events.py  exceptions.py  execution.py  models.py  pricing.py  run_state.py  skills.py  workspace.py
agent_orchestrator/adapters/: __init__.py  base.py  claude.py  copilot.py  mock.py
agent_orchestrator/repositories/: __init__.py  artifacts.py  edges.py  processes.py  runs.py  workflows.py
agent_orchestrator/routers/: __init__.py  artifacts.py  edges.py  processes.py  runs.py  system.py  workflows.py
agent_orchestrator/templates/base/: AGENTS.md
agent_orchestrator/templates/base/utils/: question.py  (+1 more)
docs/: SPEC.md  notifications.md  refactoring-plan.md  setup-script.md  workflow-export-import-delete.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: ActivityPanel.tsx  ArtifactInspector.tsx  CanvasPanel.tsx  FlowNodes.tsx  LeftPanel.tsx  LogViewer.tsx  ProcessInspector.tsx  RunReviewPanel.tsx  SettingsModal.tsx  StatusPill.tsx  Topbar.tsx
frontend/src/hooks/: useArtifactPreview.ts  useCanvasActions.ts  useDrafts.ts  useFlowGraph.ts  useGoalAutocomplete.ts  useHealth.ts  useNotifications.ts  useRunReview.ts  useRunStream.ts  useRunSummaries.ts  useSelectedWorkflowItems.ts  useSkills.ts  useWorkflowActions.ts  useWorkflowName.ts  useWorkflowSync.ts
frontend/src/lib/: artifactContent.ts  format.ts  goal.ts  logClassify.ts  payloads.ts  skills.ts  workflow.ts
scripts/: orch.env.example  orch.sh  real_claude_smoke.py
tests/: test_api.py
