[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-process-orchestrator"
version = "0.1.0"
description = "Local DFD-style process orchestrator for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
agent-orch = "agent_orchestrator.cli:main"

[tool.setuptools.packages.find]
include = ["agent_orchestrator*"]

[tool.setuptools.package-data]
agent_orchestrator = [
  "templates/base/AGENTS.md",
  "templates/base/utils/*.py",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

