[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfd-agents"
version = "0.1.0"
description = "Local DFD-style workflow workbench for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.8",
]

[project.scripts]
dfd-agents = "agent_orchestrator.cli:main"
agent-orch = "agent_orchestrator.cli:main"

[tool.setuptools.packages.find]
include = ["agent_orchestrator*"]

[tool.setuptools.package-data]
agent_orchestrator = [
  "templates/base/AGENTS.md",
  "templates/base/utils/*.py",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
  ".orch",
  "frontend",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
